# ping_pong_3d

./: .gitignor  CMakeLists.txt  main.1.cpp  main.cpp
headers/: Ball.h  Player.h  Socket.h  Table.h  Window.h
headers/socket/: common.h  receive_file.h  send_file.h
src/: Ball.cpp  Player.cpp  Socket.cpp  Table.cpp  Window.cpp
src/socket/: common.cpp  receive_file.cpp  send_file.cpp
